add new exhibit page and add new form

--- a/app/views/exhibits/new.erb
+++ b/app/views/exhibits/new.erb
@@ -1,1 +1,6 @@
-test
+<h1> Create New Exhibit </h1>
+<form method="POST" action="/exhibits">
+<label> Theme </label>
+<input type="text" name="theme" value="">
+<input type="submit" value="Create Exhibit">
+</form>
