add more fields to new form

--- a/app/views/exhibits/new.erb
+++ b/app/views/exhibits/new.erb
@@ -1,6 +1,23 @@
 <h1> Create New Exhibit </h1>
 <form method="POST" action="/exhibits">
-<label> Theme </label>
-<input type="text" name="theme" value="">
+<label> Title </label>
+<input type="text" name="title" value="">
+<br>
+<label> Deadline </label>
+<input type="text" name="deadline" value="">
+<br>
+<label> Medium </label>
+<input type="text" name="medium" value="">
+<br>
+<label> Exhibit Date </label>
+<input type="text" name="exhibit_date" value="">
+<br>
+<label> Location </label>
+<input type="text" name="location" value="">
+<br>
+<label> Entry Fee </label>
+<input type="text" name="entry_fee" value="">
+<br>
+<br>
 <input type="submit" value="Create Exhibit">
 </form>
