modify exhibits show page

--- a/app/views/exhibits/show.erb
+++ b/app/views/exhibits/show.erb
@@ -2,7 +2,7 @@
 <h3> Here is your exhibit list:</h3>
 
 <br>
-<p> <%=@exhibit.theme%> </p>
+<p> <%=@exhibit.title%> </p>
 
 <a href="/edit">Edit</a>
 <a href="/delete">Delete</a>
