--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="/stylesheets/main.css" />
   </head>
   <body>
+    <div class="nav">
+      <a href="/logout">Logout</a>
+      <a href="/users/show">Profile</a>
+    </div>
     <div class="wrapper">
 
         <%= yield %>
