add exhibit edit form and edit link to exhibit show

--- a/app/views/exhibits/show.erb
+++ b/app/views/exhibits/show.erb
@@ -4,5 +4,5 @@
 <br>
 <p> <%=@exhibit.title%> </p>
 
-<a href="/edit">Edit</a>
+<a href="/exhibits/<%= @exhibit.id %>/edit">Edit</a>
 <a href="/delete">Delete</a>
