--- a/app/views/exhibits/show.erb
+++ b/app/views/exhibits/show.erb
@@ -3,6 +3,11 @@
 
 <br>
 <p> <%=@exhibit.title%> </p>
+<p> <%=@exhibit.deadline%> </p>
+<p> <%=@exhibit.medium%> </p>
+<p> <%=@exhibit.exhibit_date%> </p>
+<p> <%=@exhibit.location%> </p>
+<p> <%=@exhibit.entry_fee%> </p>
 
 <a href="/exhibits/<%= @exhibit.id %>/edit">Edit</a>
 <a href="/delete">Delete</a>
