add delete method & add delete, new, all exhibit  links to views

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,3 +1,6 @@
 <h1> Hello, <%=@user.name%></h1>
 
+<a href="/exhibits/new">New Exhibit</a>
+<a href="/exhibits">View All Exhibits</a>
+
 <a href="/logout">Log Out</a>
