--- a/app/views/exhibits/show.erb
+++ b/app/views/exhibits/show.erb
@@ -10,4 +10,7 @@
 <p> <%=@exhibit.entry_fee%> </p>
 
 <a href="/exhibits/<%= @exhibit.id %>/edit">Edit</a>
-<a href="/delete">Delete</a>
+<form method="POST" action="/exhibits/<%= @exhibit.id %>">
+  <input type="hidden" name="_method" value="delete">
+  <input type="submit" name="" value="Delete">
+</form>
