add sinatra gem & add error messages

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,6 +18,11 @@
       <a href="/logout">Logout</a>
       <a href="/users/show">Profile</a>
     </div>
+
+    <% if flash[:message] %>
+      <h4><%= flash[:message] %></h4>
+ <% end %>
+
     <div class="wrapper">
 
         <%= yield %>
