add new bg image to main.css, remove footer from layout

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -23,14 +23,14 @@
       <h4><%= flash[:message] %></h4>
  <% end %>
 
-    <div class="wrapper">
+    <!-- <div class="wrapper"> -->
 
         <%= yield %>
 
-      <footer class="branding">
+      <!-- <footer class="branding">
         <small>&copy; 2018 <strong>ArtExhibitSinatraApp</strong></small>
       </footer>
-    </div>
+    </div> -->
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <!--[if lt IE 7]>
