add new intro and change button style

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,10 +14,10 @@
     <link rel="stylesheet" href="/stylesheets/main.css" />
   </head>
   <body>
-    <div class="nav">
+    <!-- <div class="nav">
       <a href="/logout">Logout</a>
       <a href="/users/show">Profile</a>
-    </div>
+    </div> -->
 
     <% if flash[:message] %>
       <h4><%= flash[:message] %></h4>
