--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,23 @@
-<h1> Welcome to Art Gallery Sinatra App </h1>
 
-<br>
-<p> Already have an account? <a href="/login">Log In</a></p>
-<p>
-<p> Create an account. <a href="/signup">Sign Up</a></p>
+
+<!DOCTYPE html>
+<html class="no-js" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+    <title></title>
+    <link rel="stylesheet" href="/stylesheets/main.css" />
+  </head>
+  <body>
+    <div class="intro">
+      <h1> Hello, Artist. It's time to save the exhibit you want to join in. </h1>
+      <br>
+      <a href="/login"><span class="button">Log In</span></a>
+      
+      <a href="/signup"><span class="button">Sign Up</span></a>
+    </div>
+
+
+
+  </body>
+</html>
