changed bg image, start styling login page, remove flash msg from index

--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,9 +1,26 @@
-<h1> Log In </h1>
 
-<form method="POST" action="/login">
-  <label>Username</label>
-    <input type="text" name="username" value="">
-    <label>Password</label>
-    <input type="text" name="password" value="">
-    <input type="submit" value="Login">
-  </form>
+
+
+  <!DOCTYPE html>
+  <html class="no-js" lang="en">
+    <head>
+      <meta charset="utf-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+      <title></title>
+      <link rel="stylesheet" href="/stylesheets/main.css" />
+    </head>
+    <body>
+      <div class="intro">
+
+        <form method="POST" action="/login">
+          <label>Username</label>
+            <input type="text" name="username" value="">
+            <label>Password</label>
+            <input type="text" name="password" value="">
+            <input type="submit" value="Login">
+          </form>
+
+      </div>
+
+    </body>
+  </html>
