--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html class="no-js" lang="en">
   <head>
@@ -10,14 +8,12 @@
   </head>
   <body>
     <div class="intro">
-      <h1> Hello, Artist. It's time to save the exhibit you want to join in. </h1>
+      <h1> Hello, Artist. </h1>
+      <h1> Where's your next exhibit? </h1>
       <br>
-      <a href="/login"><span class="button">Log In</span></a>
+      <a href="/login"><span class="button">Login</span></a>
 
-      <a href="/signup"><span class="button">Sign Up</span></a>
+      <a href="/signup"><span class="button">Signup</span></a>
     </div>
-
-
-
   </body>
 </html>
