--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,9 +19,9 @@
       <a href="/users/show">Profile</a>
     </div> -->
 
-    <% if flash[:message] %>
+    <!-- <% if flash[:message] %>
       <h4><%= flash[:message] %></h4>
- <% end %>
+ <% end %> -->
 
     <!-- <div class="wrapper"> -->
 
