--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,25 +1,24 @@
-
-
-
-  <!DOCTYPE html>
+<!DOCTYPE html>
   <html class="no-js" lang="en">
     <head>
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
       <title></title>
-      <link rel="stylesheet" href="/stylesheets/main.css" />
+      <link rel="stylesheet" href="/stylesheets/subpages.css" />
     </head>
     <body>
-      <div class="intro">
-
+        <div class="form"
         <form method="POST" action="/login">
           <label>Username</label>
+          <br>
             <input type="text" name="username" value="">
+            <br>
             <label>Password</label>
+            <br>
             <input type="text" name="password" value="">
+            <br>
             <input type="submit" value="Login">
           </form>
-
       </div>
 
     </body>
