add style to signup page and fix login button

--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="/stylesheets/subpages.css" />
     </head>
     <body>
-        <div class="form"
+        <div class="form">
         <form method="POST" action="/login">
           <label>Username</label>
           <br>
@@ -19,7 +19,7 @@
             <br>
             <input type="submit" value="Login">
           </form>
-      </div>
+        </div>
 
-    </body>
-  </html>
+      </body>
+    </html>
