--- a/app/views/exhibits/exhibits.erb
+++ b/app/views/exhibits/exhibits.erb
@@ -1,7 +1,22 @@
-<h1> All Exhibits </h1>
+<!DOCTYPE html>
+  <html class="no-js" lang="en">
+    <head>
+      <meta charset="utf-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+      <title></title>
+      <link rel="stylesheet" href="/stylesheets/subpages.css" />
+    </head>
+    <body>
+        <div class="form">
+          <h1> All Exhibits </h1>
 
-<% @exhibits.each do |exhibit| %>
+          <% @exhibits.each do |exhibit| %>
 
 
-<a href="/exhibits/<%= exhibit.id %>"><%= exhibit.title %></a>
-<% end %>
+          <a href="/exhibits/<%= exhibit.id %>"><%= exhibit.title %><%= exhibit.deadline %></a>
+
+          <% end %>
+        </div>
+
+      </body>
+    </html>
