--- a/app/views/exhibits/new.erb
+++ b/app/views/exhibits/new.erb
@@ -1,23 +1,43 @@
-<h1> Create New Exhibit </h1>
-<form method="POST" action="/exhibits">
-<label> Title </label>
-<input type="text" name="title" value="">
-<br>
-<label> Deadline </label>
-<input type="text" name="deadline" value="">
-<br>
-<label> Medium </label>
-<input type="text" name="medium" value="">
-<br>
-<label> Exhibit Date </label>
-<input type="text" name="exhibit_date" value="">
-<br>
-<label> Location </label>
-<input type="text" name="location" value="">
-<br>
-<label> Entry Fee </label>
-<input type="text" name="entry_fee" value="">
-<br>
-<br>
-<input type="submit" value="Create Exhibit">
-</form>
+<!DOCTYPE html>
+    <html class="no-js" lang="en">
+      <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+        <title></title>
+        <link rel="stylesheet" href="/stylesheets/subpages.css" />
+      </head>
+      <body>
+          <div class="form">
+            <h1> Create New Exhibit </h1>
+            <form method="POST" action="/exhibits">
+            <label> Title </label>
+            <br>
+            <input type="text" name="title" value="">
+            <br>
+            <label> Deadline </label>
+            <br>
+            <input type="text" name="deadline" value="">
+            <br>
+            <label> Medium </label>
+            <br>
+            <input type="text" name="medium" value="">
+            <br>
+            <label> Exhibit Date </label>
+            <br>
+            <input type="text" name="exhibit_date" value="">
+            <br>
+            <label> Location </label>
+            <br>
+            <input type="text" name="location" value="">
+            <br>
+            <label> Entry Fee </label>
+            <br>
+            <input type="text" name="entry_fee" value="">
+            <br>
+            <br>
+            <input type="submit" value="Create Exhibit">
+            </form>
+          </div>
+
+        </body>
+      </html>
