--- a/app/views/exhibits/show.erb
+++ b/app/views/exhibits/show.erb
@@ -1,16 +1,29 @@
+<!DOCTYPE html>
+  <html class="no-js" lang="en">
+    <head>
+      <meta charset="utf-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+      <title></title>
+      <link rel="stylesheet" href="/stylesheets/subpages.css" />
+    </head>
+    <body>
+        <div class="form">
+          <h3> Here is your exhibit list:</h3>
 
-<h3> Here is your exhibit list:</h3>
+          <br>
+          <p> <%=@exhibit.title%> </p>
+          <p> <%=@exhibit.deadline%> </p>
+          <p> <%=@exhibit.medium%> </p>
+          <p> <%=@exhibit.exhibit_date%> </p>
+          <p> <%=@exhibit.location%> </p>
+          <p> <%=@exhibit.entry_fee%> </p>
 
-<br>
-<p> <%=@exhibit.title%> </p>
-<p> <%=@exhibit.deadline%> </p>
-<p> <%=@exhibit.medium%> </p>
-<p> <%=@exhibit.exhibit_date%> </p>
-<p> <%=@exhibit.location%> </p>
-<p> <%=@exhibit.entry_fee%> </p>
+          <a href="/exhibits/<%= @exhibit.id %>/edit">Edit</a>
+          <form method="POST" action="/exhibits/<%= @exhibit.id %>">
+            <input type="hidden" name="_method" value="delete">
+            <input type="submit" name="" value="Delete">
+          </form>
+        </div>
 
-<a href="/exhibits/<%= @exhibit.id %>/edit">Edit</a>
-<form method="POST" action="/exhibits/<%= @exhibit.id %>">
-  <input type="hidden" name="_method" value="delete">
-  <input type="submit" name="" value="Delete">
-</form>
+      </body>
+    </html>
