--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,6 +1,23 @@
-<h1> Hello, <%=@user.name%></h1>
 
-<a href="/exhibits/new">New Exhibit</a>
-<a href="/exhibits">View All Exhibits</a>
 
-<a href="/logout">Log Out</a>
+<!DOCTYPE html>
+    <html class="no-js" lang="en">
+      <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+        <title></title>
+        <link rel="stylesheet" href="/stylesheets/subpages.css" />
+      </head>
+      <body>
+          <div class="form">
+            <h1> Hello, <%=@user.name%></h1>
+            <br>
+            <a href="/exhibits/new">New Exhibit</a>
+            <br>
+            <a href="/exhibits">View All Exhibits</a>
+            <br>
+            <a href="/logout">Log Out</a>
+          </div>
+
+        </body>
+      </html>
