--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
     <html class="no-js" lang="en">
       <head>
@@ -12,9 +10,9 @@
           <div class="form">
             <h1> Hello, <%=@user.name%></h1>
             <br>
-            <a href="/exhibits/new">New Exhibit</a>
+            <a href="/exhibits/new"><span class="button">New Exhibit</span></a>
             <br>
-            <a href="/exhibits">View All Exhibits</a>
+            <a href="/exhibits"><span class="button">All Exhibits</span></a>
             <br>
             <a href="/logout">Log Out</a>
           </div>
