--- a/public/stylesheets/subpages.css
+++ b/public/stylesheets/subpages.css
@@ -68,7 +68,8 @@
 	color:#ffffff;
 	font-family: "Open Sans";
 	font-size:17px;
-	padding:16px 60px;
+	padding:12px 50px;
+  margin: 8px 0;
 	text-decoration:none;
 }
 
@@ -77,7 +78,9 @@ input[type=text], select {
   padding: 12px 50px;
   border-radius: 80px;
   border: 1px solid #707070;
-  opacity: 0.3;
+  opacity: 0.6;
+  font-size:17px;
+  text-align: center;
 }
 
 input[type=submit] {
@@ -91,6 +94,10 @@ input[type=submit] {
   margin: 8px 0;
   text-decoration:none;
   text-transform: uppercase;
+}
+
+a:link, a:visited, a:hover, a:active {
+  text-decoration: none;
 }
 
   .content {
