adjust form position and remove text uppercase

--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -9,11 +9,11 @@
     <body>
         <div class="form">
         <form method="POST" action="/login">
-          <label>Username</label>
+          <label>USERNAME</label>
           <br>
             <input type="text" name="username" value="">
             <br>
-            <label>Password</label>
+            <label>PASSWORD</label>
             <br>
             <input type="text" name="password" value="">
             <br>
