--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -9,15 +9,15 @@
       <body>
           <div class="form">
             <form method="POST" action="/users">
-              <label>Name</label>
+              <label>NAME</label>
               <br>
                 <input type="text" name="name" value="">
                 <br>
-              <label>Username</label>
+              <label>USERNAME</label>
               <br>
                 <input type="text" name="username" value="">
                 <br>
-                <label>Password</label>
+                <label>PASSWORD</label>
                 <br>
                 <input type="text" name="password" value="">
                 <br>
