--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -8,11 +8,11 @@
       </head>
       <body>
           <div class="form">
-            <h1> Hello, <%=@user.name%></h1>
+            <h1> Hello, <%=@user.name%>.</h1>
             <br>
-            <a href="/exhibits/new"><span class="button">New Exhibit</span></a>
+            <a href="/exhibits/new"><span class="button">NEW EXHIBIT</span></a>
             <br>
-            <a href="/exhibits"><span class="button">All Exhibits</span></a>
+            <a href="/exhibits"><span class="button">ALL EXHIBIT</span></a>
             <br>
             <a href="/logout">Log Out</a>
           </div>
