--- a/public/stylesheets/subpages.css
+++ b/public/stylesheets/subpages.css
@@ -52,9 +52,8 @@
   font-family: "Open Sans";
   font-size: 39px;
   font-weight: 400;
-  text-transform: uppercase;
   text-align: center;
-  margin: 200px 70px;
+  margin: 2000px 70px;
   float: right;
   }
 
@@ -73,7 +72,20 @@
 	text-decoration:none;
 }
 
+.form {
+  width: 694px;
+  height: 107px;
+  color: #707070;
+  font-family: "Open Sans";
+  font-size: 20px;
+  font-weight: 400;
+  text-align: center;
+  margin: 150px 70px;
+  float: right;
+}
+
 input[type=text], select {
+  width: 30%;
   margin: 8px 0;
   padding: 12px 50px;
   border-radius: 80px;
@@ -90,8 +102,9 @@ input[type=submit] {
   color:#ffffff;
   font-family: "Open Sans";
   font-size:17px;
-  padding:12px 85px;
+  width: 45%;
   margin: 8px 0;
+  padding: 12px 50px;
   text-decoration:none;
   text-transform: uppercase;
 }
