--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -12,9 +12,9 @@
             <br>
             <a href="/exhibits/new"><span class="button">NEW EXHIBIT</span></a>
             <br>
-            <a href="/exhibits"><span class="button">ALL EXHIBIT</span></a>
+            <a href="/exhibits"><span class="button">ALL EXHIBITS</span></a>
             <br>
-            <a href="/logout">Log Out</a>
+            <a href="/logout">LOG OUT</a>
           </div>
 
         </body>
