--- a/public/stylesheets/subpages.css
+++ b/public/stylesheets/subpages.css
@@ -84,6 +84,19 @@
   float: right;
 }
 
+.show {
+  width: 694px;
+  height: 107px;
+  color: #707070;
+  font-family: "Open Sans";
+  font-size: 20px;
+  font-weight: 400;
+  text-align: center;
+  margin: 150px 70px;
+  float: right;
+  text-transform: uppercase;
+}
+
 input[type=text], select {
   width: 30%;
   margin: 8px 0;
