--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -22,6 +22,8 @@
                 <input type="text" name="password" value="">
                 <br>
                 <input type="submit" value="Sign Up">
+                <br>
+                <a href="/login">Already have an account? Login.</a>
               </form>
           </div>
 
