--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -18,7 +18,8 @@
             <input type="text" name="password" value="">
             <br>
             <input type="submit" value="Login">
-
+            <br>
+            <a href="/signup">No account yet? Signup.</a>
 
           </form>
 
