--- a/app/views/exhibits/show.erb
+++ b/app/views/exhibits/show.erb
@@ -16,11 +16,14 @@
           <p> <%=@exhibit.location.upcase%> </p>
           <p> <%=@exhibit.entry_fee.upcase%> </p>
           <br>
-          <p><a href="/exhibits/<%= @exhibit.id %>/edit">Edit</a></p>
           <a href="/exhibits">All Exhibits</a>
+          <a href="/exhibits/new">Add New</a>
+          <% if logged_in? && @exhibit.user == current_user %>
+          <p><a href="/exhibits/<%= @exhibit.id %>/edit">Edit</a></p>
           <form method="POST" action="/exhibits/<%= @exhibit.id %>">
             <input type="hidden" name="_method" value="delete">
             <input type="submit" name="" value="Delete">
+            <% end %>
           </form>
         </div>
 
