--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -27,8 +27,8 @@
 
     <div class="nav">
         <% if logged_in? %>
-            <a href="/logout">LOGOUT </a>
-            <a href="/">HOME</a>
+            <a href="/">HOME | </a>
+            <a href="/logout">LOGOUT</a>
       <% end %>
 
 </div>
