--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -73,6 +73,12 @@
 	text-decoration:none;
 }
 
+.nav {
+    text-align:  right;
+    font-family: "Open Sans";
+  	font-size:17px;
+  	padding:16px 60px;
+  }
 
 
   .content {
