add flash message if statement

--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -7,7 +7,11 @@
       <link rel="stylesheet" href="/stylesheets/subpages.css" />
     </head>
     <body>
+
         <div class="form">
+          <% if flash[:message] %>
+          <p style="color:red; font-size: 13px"> <%= flash[:message] %> </p>
+          <% end %>
         <form method="POST" action="/login">
           <label>USERNAME</label>
           <br>
