add flash message if statement

--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -8,6 +8,11 @@
       </head>
       <body>
           <div class="form">
+            
+            <% if flash[:message] %>
+            <p style="color:red; font-size: 13px"> <%= flash[:message] %> </p>
+            <% end %>
+
             <form method="POST" action="/users">
               <label>NAME</label>
               <br>
