--- a/app/views/exhibits/new.erb
+++ b/app/views/exhibits/new.erb
@@ -8,6 +8,11 @@
       </head>
       <body>
           <div class="form">
+
+            <% if flash[:message] %>
+            <p style="color:red; font-size: 13px"> <%= flash[:message] %> </p>
+            <% end %>
+
             <form method="POST" action="/exhibits">
             <input type="text" name="title" value="" placeholder="TITLE">
             <br>
