--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -8,7 +8,7 @@
       </head>
       <body>
           <div class="form">
-            <h1> Hello, <%=@user.name%>.</h1>
+            <h1> Hello, <%=@user.name.titleize%>.</h1>
             <br>
             <a href="/exhibits/new"><span class="button">NEW EXHIBIT</span></a>
             <br>
